--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -147,6 +147,14 @@ resources:
   source:
     repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
 
+- name: cf-deployment-concourse-tasks-w-gcloud-image
+  type: docker-image
+  source:
+    repository: cfinfrastructure/cf-deployment-concourse-tasks-w-gcloud
+    username: {{docker-username}}
+    password: {{docker-password}}
+    email: {{docker-email}}
+
 - name: cf-deployment-concourse-tasks-bbl-dev-docker-image
   type: docker-image
   source:
@@ -692,6 +700,7 @@ jobs:
     - get: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
       passed: [bbl-downstream-docker-image]
+    - get: cf-deployment-concourse-tasks-w-gcloud-image
     - get: ci
       resource: infrastructure-ci
     - get: cf-deployment
