--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -72,6 +72,12 @@ resources:
     access_key_id: {{bbl_acceptance_tests_s3_access_key_id}}
     secret_access_key: {{bbl_acceptance_tests_s3_secret_access_key}}
 
+- name: cf-acceptance-tests
+  type: git
+  source:
+    branch: master
+    uri: https://github.com/cloudfoundry/cf-acceptance-tests.git
+
 - name: cats-concourse-task
   type: git
   source:
@@ -727,6 +733,7 @@ jobs:
     - get: vars-store
       resource: infrastructure-ci-bbl-states
     - get: cats-concourse-task
+    - get: cf-acceptance-tests
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
     image: cf-deployment-concourse-tasks-bbl-dev-docker-image
