Use cf-deployment-concourse-tasks to deploy concourse on GCP
[#151225372]

Signed-off-by: Dave McClure <dmcclure@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -11,6 +11,7 @@ groups:
   - bbl-aws-cf
   - bbl-gcp-cf
   - bbl-gcp-cf-with-cats
+  - bbl-gcp-concourse
   - major
   - minor
   - passed-acceptance-tests
@@ -43,6 +44,16 @@ resources:
   type: bosh-io-stemcell
   source:
     name: bosh-google-kvm-ubuntu-trusty-go_agent
+
+# - name: garden-release
+#   type: bosh-io-release
+#   source:
+#     repository: cloudfoundry/garden-runc-release
+
+# - name: concourse-release
+#   type: bosh-io-release
+#   source:
+#     repository: concourse/concourse
 
 - name: bosh-bootloader
   type: git
@@ -147,6 +158,12 @@ resources:
   source:
     branch: master
     uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks.git
+
+- name: cf-deployment-concourse-tasks-fork
+  type: git
+  source:
+    branch: lb-type
+    uri: https://github.com/mcwumbly/cf-deployment-concourse-tasks.git
 
 - name: cf-deployment-concourse-tasks-docker-image
   type: docker-image
@@ -454,6 +471,311 @@ jobs:
         build: bbl-dev-w-gcloud/dockerfiles/cf-deployment-concourse-tasks-bbl-dev-w-gcloud
         cache: false
 
+- name: bbl-gcp-concourse
+  serial: true
+  build_logs_to_retain: 100
+  plan:
+  - aggregate:
+    - get: concourse-deployment
+    - get: bosh-bootloader
+    - get: cf-deployment-concourse-tasks
+      resource: cf-deployment-concourse-tasks-fork
+    - get: infrastructure-ci-bbl-states
+    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
+      passed: [bbl-downstream-docker-image]
+      trigger: true
+    - get: ci
+      resource: infrastructure-ci
+    - get: vars-files
+      resource: infrastructure-ci-bbl-states
+    - get: vars-store
+      resource: infrastructure-ci-bbl-states
+  - task: bbl-up
+    file: cf-deployment-concourse-tasks/bbl-up/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    params:
+      BBL_IAAS: gcp
+      BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+      BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
+      BBL_GCP_REGION: {{bbl_gcp_region}}
+      BBL_GCP_ZONE: {{bbl_gcp_zone}}
+      BBL_LB_CERT: {{bbl_downstream_cf_ssl_cert}}
+      BBL_LB_KEY: {{bbl_downstream_cf_ssl_cert_private_key}}
+      BBL_LB_TYPE: concourse
+      BBL_ENV_NAME: bbl-gcp-concourse
+      BBL_STATE_DIR: bbl-gcp-concourse
+      GIT_COMMIT_EMAIL: cf-infrastructure@pivotal.io
+      GIT_COMMIT_USERNAME: CI Infra Bot
+    input_mapping:
+      bbl-state: infrastructure-ci-bbl-states
+      ops-files: infrastructure-ci-bbl-states
+    ensure:
+      put: infrastructure-ci-bbl-states
+      params:
+        repository: updated-bbl-state
+    on_failure:
+      task: bbl-up-destroy-infrastructure
+      file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+      image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+      params:
+        BBL_STATE_DIR: bbl-gcp-concourse
+        BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+        BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
+      input_mapping:
+        bbl-state: updated-bbl-state
+      on_failure:
+        put: infrastructure-ci-bbl-states
+        params:
+          repository: updated-bbl-state
+  - task: upload-stemcell
+    file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    input_mapping:
+      bbl-state: updated-bbl-state
+      cf-deployment: concourse-deployment
+    params:
+      BBL_STATE_DIR: bbl-gcp-concourse
+      BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+      BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
+      INFRASTRUCTURE: google
+      MANIFEST_FILE: concourse-deployment.yml
+    on_failure:
+      task: upload-stemcell-destroy-infrastructure
+      file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+      image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+      input_mapping:
+        bbl-state: updated-bbl-state
+      params:
+        BBL_STATE_DIR: bbl-gcp-concourse
+        BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+        BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
+      on_failure:
+        put: infrastructure-ci-bbl-states
+        params:
+          repository: updated-bbl-state
+  - task: deploy-concourse
+    file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    input_mapping:
+      bbl-state: updated-bbl-state
+      cf-deployment: concourse-deployment
+      ops-files: concourse-deployment
+    params:
+      BBL_STATE_DIR: bbl-gcp-concourse
+      BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+      BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
+      SYSTEM_DOMAIN: bbl-gcp-concourse.bbl-test.ci.cf-app.com
+      VARS_STORE_FILE: bbl-gcp-concourse/deployment-vars.yml
+      MANIFEST_FILE: concourse-deployment.yml
+      OPS_FILES: operations/gcp.yml
+    ensure:
+      put: infrastructure-ci-bbl-states
+      params:
+        repository: updated-vars-store
+        rebase: true
+    on_failure:
+      do:
+      - task: delete-concourse-deployment
+        file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
+        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+        input_mapping:
+          bbl-state: updated-bbl-state
+        params:
+          BBL_STATE_DIR: bbl-gcp-concourse
+          DEPLOYMENT_NAME: concourse
+      - task: bosh-cleanup
+        file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
+        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+        input_mapping:
+          bbl-state: updated-bbl-state
+        params:
+          CLEAN_ALL: true
+          BBL_STATE_DIR: bbl-gcp-concourse
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
+      - task: destroy-infrastructure
+        file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+        input_mapping:
+          bbl-state: updated-bbl-state
+        params:
+          BBL_STATE_DIR: bbl-gcp-concourse
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
+        on_failure:
+          put: infrastructure-ci-bbl-states
+          params:
+            repository: updated-bbl-state
+  - task: curl-concourse
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    input_mapping:
+      bbl-state: updated-bbl-state
+    config:
+      platform: linux
+      inputs:
+      - name: bbl-state
+      params:
+        BBL_STATE_DIR: bbl-gcp-concourse
+      run:
+        path: bash
+        args:
+          - "-c"
+          - "curl -k https://$(bbl lbs --state-dir bbl-state/${BBL_STATE_DIR} | cut -d ':' -f 2 | tr -d ' ') | grep '<title>Concourse</title>'"
+    ensure:
+      do:
+      - task: delete-concourse-deployment
+        file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
+        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+        input_mapping:
+          bbl-state: updated-bbl-state
+        params:
+          BBL_STATE_DIR: bbl-gcp-concourse
+          DEPLOYMENT_NAME: concourse
+      - task: bosh-cleanup
+        file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
+        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+        input_mapping:
+          bbl-state: updated-bbl-state
+        params:
+          CLEAN_ALL: true
+          BBL_STATE_DIR: bbl-gcp-concourse
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
+      - task: destroy-infrastructure
+        file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+        input_mapping:
+          bbl-state: updated-bbl-state
+        params:
+          BBL_STATE_DIR: bbl-gcp-concourse
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
+        on_failure:
+          put: infrastructure-ci-bbl-states
+          params:
+            repository: updated-bbl-state
+
+# - name: bbl-aws-concourse
+#   serial: true
+#   build_logs_to_retain: 100
+#   plan:
+#   - aggregate:
+#     - get: concourse-deployment
+#     - get: bosh-bootloader
+#     - get: cf-deployment-concourse-tasks
+#       resource: cf-deployment-concourse-tasks-fork
+#     - get: infrastructure-ci-bbl-states
+#     - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
+#       passed: [bbl-downstream-docker-image]
+#       trigger: true
+#     - get: ci
+#       resource: infrastructure-ci
+#     - get: vars-files
+#       resource: infrastructure-ci-bbl-states
+#     - get: vars-store
+#       resource: infrastructure-ci-bbl-states
+#   - task: bbl-up
+#     file: cf-deployment-concourse-tasks/bbl-up/task.yml
+#     image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+#     params:
+#       BBL_IAAS: aws
+#       BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+#       BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
+#       BBL_AWS_REGION: us-west-2
+#       BBL_LB_CERT: {{bbl_aws_cf_lb_cert}}
+#       BBL_LB_KEY: {{bbl_aws_cf_lb_key}}
+#       BBL_LB_TYPE: concourse
+#       BBL_ENV_NAME: bbl-aws-concourse
+#       BBL_STATE_DIR: bbl-aws-concourse
+#       GIT_COMMIT_EMAIL: cf-infrastructure@pivotal.io
+#       GIT_COMMIT_USERNAME: CI Infra Bot
+#     input_mapping:
+#       bbl-state: infrastructure-ci-bbl-states
+#       ops-files: infrastructure-ci-bbl-states
+#     on_failure:
+#       task: bbl-up-destroy-infrastructure
+#       file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+#       image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+#       params:
+#         BBL_STATE_DIR: bbl-aws-concourse
+#         BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+#         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
+#       input_mapping:
+#         bbl-state: updated-bbl-state
+#       on_failure:
+#         put: infrastructure-ci-bbl-states
+#         params:
+#           repository: updated-bbl-state
+#   - task: upload-stemcell
+#     file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+#     image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+#     input_mapping:
+#       bbl-state: updated-bbl-state
+#     params:
+#       BBL_STATE_DIR: bbl-aws-concourse
+#       BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+#       BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
+#       INFRASTRUCTURE: aws
+#     on_failure:
+#       task: upload-stemcell-destroy-infrastructure
+#       file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+#       image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+#       input_mapping:
+#         bbl-state: updated-bbl-state
+#       params:
+#         BBL_STATE_DIR: bbl-aws-concourse
+#         BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+#         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
+#       on_failure:
+#         put: infrastructure-ci-bbl-states
+#         params:
+#           repository: updated-bbl-state
+#   - task: deploy-concourse
+#     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
+#     image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+#     input_mapping:
+#       bbl-state: updated-bbl-state
+#     params:
+#       BBL_STATE_DIR: bbl-aws-concourse
+#       BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+#       BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
+#       SYSTEM_DOMAIN: bbl-gcp-concourse.bbl-test.ci.cf-app.com
+#       VARS_STORE_FILE: bbl-gcp-concourse/deployment-vars.yml
+#       MANIFEST_FILE: concourse-deployment.yml
+#     ensure:
+#       do:
+#       - task: delete-concourse-deployment
+#         file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
+#         image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+#         input_mapping:
+#           bbl-state: updated-bbl-state
+#         params:
+#           BBL_STATE_DIR: bbl-gcp-concourse
+#           DEPLOYMENT_NAME: concourse
+#       - task: bosh-cleanup
+#         file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
+#         image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+#         input_mapping:
+#           bbl-state: updated-bbl-state
+#         params:
+#           CLEAN_ALL: true
+#           BBL_STATE_DIR: bbl-gcp-concourse
+#           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+#           BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
+#       - task: destroy-infrastructure
+#         file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+#         image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+#         input_mapping:
+#           bbl-state: updated-bbl-state
+#         params:
+#           BBL_STATE_DIR: bbl-gcp-concourse
+#           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+#           BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
+#         on_failure:
+#           put: infrastructure-ci-bbl-states
+#           params:
+#             repository: updated-bbl-state
+
 - name: passed-acceptance-tests
   plan:
   - aggregate:
@@ -465,6 +787,8 @@ jobs:
       - gcp-acceptance-tests
       - aws-concourse-acceptance-tests
       - gcp-concourse-acceptance-tests
+      # - bbl-aws-concourse
+      # - bbl-gcp-concourse
       - bbl-downstream-docker-image
 
 - name: bbl-aws-cf
